arm: DT: Satsuki: Add dsi-fbc-enable for FrameBuffer Compression
Satsuki has a 4k resolution capable display but, even in dual DSI
configuration, there is not enough bandwidth.
For this, we need framebuffer compression: on 3.18 we enable it
with property qcom,mdss-dsi-fbc-enable.

--- a/arch/arm/boot/dts/qcom/dsi-panel-satsuki.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-satsuki.dtsi
@@ -1012,6 +1012,7 @@
 					"dsi_lp_mode";
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -1131,6 +1132,7 @@
 				qcom,mdss-dsi-t-clk-pre = <0x2B>;
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -1387,6 +1389,7 @@
 					"dsi_lp_mode";
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -1506,6 +1509,7 @@
 				qcom,mdss-dsi-t-clk-pre = <0x2B>;
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -1994,6 +1998,7 @@
 					"dsi_lp_mode";
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -2113,6 +2118,7 @@
 				qcom,mdss-dsi-t-clk-pre = <0x2B>;
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -2580,6 +2586,7 @@
 					"dsi_lp_mode";
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -2699,6 +2706,7 @@
 				qcom,mdss-dsi-t-clk-pre = <0x2B>;
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -3140,6 +3148,7 @@
 					"dsi_lp_mode";
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
@@ -3259,6 +3268,7 @@
 				qcom,mdss-dsi-t-clk-pre = <0x2B>;
 
 				qcom,mdss-dsi-compression = "fbc";
+				qcom,mdss-dsi-fbc-enable;
 				qcom,mdss-dsi-fbc-ver2-mode;
 				qcom,mdss-dsi-fbc-bpp = <8>;
 				qcom,mdss-dsi-fbc-packing = <1>;
