--- a/arch/arm/boot/dts/qcom/msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-common.dtsi
@@ -1217,6 +1217,10 @@
 
 		qcom,bus-width = <8>;
 		qcom,cpu-dma-latency-us = <701>;
+
+		qcom,pm-qos-irq-type = "affine_irq";
+		qcom,pm-qos-irq-latency = <2 250>;
+
 		qcom,msm-bus,name = "sdhc1";
 		qcom,msm-bus,num-cases = <8>;
 		qcom,msm-bus,num-paths = <1>;
@@ -1238,6 +1242,8 @@
 		qcom,clk-rates = <400000 25000000 50000000 100000000 177770000>;
 		qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
 
+		qcom,devfreq,freq-table = <50000000 177770000>;
+
 		status = "disabled";
 	};
 
@@ -1251,6 +1257,10 @@
 
 		qcom,bus-width = <4>;
 		qcom,cpu-dma-latency-us = <401>;
+
+		qcom,pm-qos-irq-type = "affine_irq";
+		qcom,pm-qos-irq-latency = <2 250>;
+
 		qcom,msm-bus,name = "sdhc2";
 		qcom,msm-bus,num-cases = <8>;
 		qcom,msm-bus,num-paths = <1>;
@@ -1270,6 +1280,7 @@
 		clock-names = "iface_clk", "core_clk";
 
 		qcom,clk-rates = <400000 25000000 50000000 100000000 177770000>;
+		qcom,devfreq,freq-table = <50000000 177770000>;
 
 		status = "disabled";
 	};
