arm: DT: 8994-v2-pm: Include PM dt bindings header
Needed for reset-level definitions.

--- a/arch/arm/boot/dts/qcom/msm8994-v2-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-v2-pm.dtsi
@@ -10,6 +10,8 @@
  * GNU General Public License for more details.
  */
 
+#include <dt-bindings/msm/pm.h>
+
 &soc {
 	qcom,spm@f9065000 {
 		compatible = "qcom,spm-v2";
