--- a/arch/arm64/configs/aosp_kitakami_ivy_defconfig
+++ b/arch/arm64/configs/aosp_kitakami_ivy_defconfig
@@ -2628,6 +2628,7 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_LEGACY=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
 # CONFIG_MSM_ADRENO_USES_OLD_FIRMWARE is not set
