arm64: configs: Update Suzu defconfig.
This defconfig allows booting the kernel completely.

--- a/arch/arm64/configs/aosp_loire_suzu_defconfig
+++ b/arch/arm64/configs/aosp_loire_suzu_defconfig
@@ -214,6 +214,8 @@ CONFIG_RFKILL=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+CONFIG_DEBUG_DRIVER=y
+CONFIG_DEBUG_DEVRES=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=64
 CONFIG_ARM_CCI=y
@@ -521,7 +523,6 @@ CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
-CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_PACMAN=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
