--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -21,7 +21,9 @@ source "drivers/gpu/vga/Kconfig"
 
 source "drivers/gpu/host1x/Kconfig"
 source "drivers/gpu/ipu-v3/Kconfig"
+
 source "drivers/gpu/msm/Kconfig"
+source "drivers/gpu/msm_legacy_310/Kconfig"
 
 menu "Direct Rendering Manager"
 source "drivers/gpu/drm/Kconfig"
