--- a/arch/arm64/configs/aosp_tone_kagura_defconfig
+++ b/arch/arm64/configs/aosp_tone_kagura_defconfig
@@ -37,7 +37,7 @@ CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_ARCH_SONY_TONE=y
-CONFIG_MACH_SONY_DORA=y
+CONFIG_MACH_SONY_KAGURA=y
 CONFIG_PCI_MSM=y
 CONFIG_ENABLE_FP_SIMD_SETTINGS=y
 CONFIG_MSM_APP_SETTINGS=y
