--- a/arch/arm64/configs/aosp_tone_kagura_defconfig
+++ b/arch/arm64/configs/aosp_tone_kagura_defconfig
@@ -31,6 +31,7 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
+CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_PARTITION_ADVANCED=y
@@ -46,17 +47,14 @@ CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
-CONFIG_SWAP_CONSIDER_CMA_FREE=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 CONFIG_SECCOMP=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
-CONFIG_ARM64_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="msm8996-v3.0-pmi8996-tone-kagura_generic msm8996-v3-pmi8996-tone-kagura_generic"
-CONFIG_CRASH_NOTES=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_PM_AUTOSLEEP=y
@@ -67,7 +65,6 @@ CONFIG_PM_RUNTIME=y
 CONFIG_PM_DEBUG=y
 CONFIG_DPM_WATCHDOG=y
 CONFIG_DPM_WATCHDOG_TIMEOUT=3
-CONFIG_WAKEUP_IRQ_DEBUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
@@ -83,7 +80,6 @@ CONFIG_UNIX=y
 CONFIG_XFRM_USER=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_NET_KEY=y
-CONFIG_XFRM_RFC_4868_TRUNCATION=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -95,7 +91,6 @@ CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 # CONFIG_INET_LRO is not set
-CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -225,7 +220,6 @@ CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 CONFIG_BT_MSM_SLEEP=y
 # CONFIG_MSM_BT_POWER is not set
-CONFIG_BT_BCM43XX=y
 CONFIG_CFG80211=y
 CONFIG_RFKILL=y
 CONFIG_NFC_NQ=y
@@ -242,14 +236,8 @@ CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_UID_CPUTIME=y
-CONFIG_NFC_PN547=y
 CONFIG_TI_DRV2667=y
-CONFIG_LDO_VIBRATOR=y
-CONFIG_RAMDUMP_TAGS=y
-CONFIG_POWERKEY_FORCECRASH=y
-CONFIG_RAMDUMP_MEMDESC=y
-CONFIG_BCM_WLAN_RAMDUMP=y
-CONFIG_SIM_DETECT=y
+CONFIG_NFC_PN547=y
 CONFIG_EEPROM_AT24=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -264,6 +252,8 @@ CONFIG_DM_CRYPT=y
 CONFIG_DM_REQ_CRYPT=y
 CONFIG_DM_UEVENT=y
 CONFIG_DM_VERITY=y
+CONFIG_DM_ANDROID_VERITY=y
+CONFIG_DM_VERITY_FEC=y
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=y
 CONFIG_DUMMY=y
@@ -284,10 +274,6 @@ CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 # CONFIG_USB_NET_DRIVERS is not set
 CONFIG_CNSS_CRYPTO=y
-CONFIG_BCMDHD_PCIE=y
-CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-CONFIG_BCMDHD_PREALLOC_PKTIDMAP=y
-CONFIG_SOMC_WIFI_CONTROL=y
 CONFIG_ATH_CARDS=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
@@ -312,11 +298,10 @@ CONFIG_SECURE_TOUCH=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
-CONFIG_INPUT_BU520X1NVX=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
-CONFIG_FPC1145_PLATFORM=y
+CONFIG_INPUT_BU520X1NVX=y
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -325,8 +310,6 @@ CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 CONFIG_SERIAL_MSM_SMD=y
-CONFIG_DIAG_CHAR=y
-CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
@@ -336,15 +319,13 @@ CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_PINCTRL_MSM8996=y
 CONFIG_PINCTRL_SOMC=y
+CONFIG_PINCTRL_MSM8996=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_QPNP_SMBCHARGER_EXTENSION=y
 CONFIG_QPNP_SMBCHARGER=y
-CONFIG_QPNP_FG_EXTENSION=y
 CONFIG_QPNP_FG=y
-CONFIG_QNS_SYSTEM=y
+CONFIG_QPNP_FG_EXTENSION=y
 CONFIG_BATTERY_BCL=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
@@ -377,7 +358,6 @@ CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_CPR3_HMSS=y
 CONFIG_REGULATOR_CPR3_MMSS=y
 CONFIG_REGULATOR_KRYO=y
-CONFIG_SOMC_LCD_OCP_ENABLED=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
@@ -415,27 +395,25 @@ CONFIG_OV8825=y
 CONFIG_OV8865=y
 CONFIG_s5k4e1=y
 CONFIG_OV12830=y
-CONFIG_SONY_CAM_V4L2=y
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 CONFIG_MSM_JPEGDMA=y
 CONFIG_RADIO_SILABS=y
+# CONFIG_MSM_KGSL_CURRENT is not set
 CONFIG_MSM_KGSL_LEGACY=y
 CONFIG_MSM_KGSL=y
 CONFIG_FB=y
 CONFIG_FB_MSM=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
-CONFIG_FB_MSM_MDSS_SPECIFIC_PANEL=y
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_SPECIFIC_PANEL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
-CONFIG_AHC=y
-CONFIG_FORCE_24BIT_COPP=y
 CONFIG_SND_SOC_MSM8996=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
@@ -449,7 +427,6 @@ CONFIG_HID_PANTHERLORD=y
 CONFIG_HID_SONY=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_XHCI_HCD=y
-CONFIG_USB_HOST_EXTRA_NOTIFICATION=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_PCI is not set
@@ -463,15 +440,13 @@ CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=4
 CONFIG_USB_G_ANDROID=y
-CONFIG_USB_MIRRORLINK=y
 CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_PARANOID_SD_INIT=y
-CONFIG_MMC_CMD_DEBUG=y
+CONFIG_MMC_UIM2TRAY_SUPPORT=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_SD_DEFERRED_RESUME=y
-CONFIG_MMC_UIM2TRAY_SUPPORT=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -499,7 +474,6 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER_CONSIDER_SWAP=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
@@ -521,7 +495,6 @@ CONFIG_SEEMP_CORE=y
 CONFIG_MSM_SPMI=y
 CONFIG_MSM_SPMI_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
-CONFIG_PON_SOMC_ORG=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_MEMORY_DUMP_V2=y
 CONFIG_MSM_BOOT_STATS=y
@@ -555,7 +528,6 @@ CONFIG_MSM_SYSMON_GLINK_COMM=y
 CONFIG_MSM_IPC_ROUTER_GLINK_XPRT=y
 CONFIG_MSM_IPC_ROUTER_MHI_XPRT=y
 CONFIG_MSM_GLINK_PKT=y
-CONFIG_MSM_FORCE_PANIC_ON_WDOG_BARK=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
@@ -565,7 +537,6 @@ CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_QBT1000=y
 CONFIG_MSM_KERNEL_PROTECT=y
-CONFIG_SUBSYS_LAST_ERR_LOG=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_CLK_CONTROLLER_V2=y
 CONFIG_MSM_MDSS_PLL=y
@@ -599,7 +570,6 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_VFAT_FS_NO_DUALNAMES=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_PSTORE=y
@@ -622,17 +592,14 @@ CONFIG_DEBUG_MUTEXES=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_IPC_LOGGING=y
-# CONFIG_TRACE_PRINTK is not set
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_STRICT_DEVMEM=y
 CONFIG_DEBUG_RODATA=y
 CONFIG_DEBUG_ALIGN_RODATA=y
+CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_SELINUX_AVC_EXTRA_INFO=y
-CONFIG_SECURITY_SELINUX_TRAP=y
-CONFIG_SECURITY_SONY_RIC=y
 # CONFIG_INTEGRITY is not set
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_CTR=y
@@ -644,6 +611,9 @@ CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
+CONFIG_ASYMMETRIC_KEY_TYPE=y
+CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
+CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
