--- a/drivers/platform/msm/Kconfig
+++ b/drivers/platform/msm/Kconfig
@@ -223,4 +223,7 @@ config MSM_EXT_DISPLAY
 	  Enabling this option adds MSM External Display Driver.
 	  External Display driver was added to support the communication
 	  between external display driver and its couterparts.
+
+source "drivers/platform/msm/spmi/Kconfig"
+
 endmenu
