power: supply: Config to switch between legacy and new charger API
Add a new configuration option to switch between legacy and new
charger drivers and API.

If CONFIG_POWER_QCOM_LEGACY is activated, the new drivers will
not even be included in configuration options, since they would
conflict with the legacy ones.

--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -1,3 +1,14 @@
-source "drivers/power/supply/qcom/Kconfig"
+config POWER_QCOM_LEGACY
+	bool "Legacy QC power supply drivers"
+	help
+	  Say Y here to use legacy power supply drivers for QC
+	  SoCs. Those drivers are needed for MSM8996, 8976 and
+	  other legacy SoCs.
 
+if POWER_QCOM_LEGACY
 source "drivers/power/supply/qcom_legacy/Kconfig"
+endif
+
+if !POWER_QCOM_LEGACY
+source "drivers/power/supply/qcom/Kconfig"
+endif
