--- a/arch/arm64/configs/aosp_loire_kugo_defconfig
+++ b/arch/arm64/configs/aosp_loire_kugo_defconfig
@@ -349,6 +349,7 @@ CONFIG_PINCTRL_SOMC=y
 CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
+CONFIG_POWER_QCOM_LEGACY=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_QPNP_SMBCHARGER=y
