--- a/arch/arm64/configs/aosp_tone_dora_defconfig
+++ b/arch/arm64/configs/aosp_tone_dora_defconfig
@@ -326,6 +326,7 @@ CONFIG_PINCTRL_MSM8996=y
 CONFIG_PINCTRL_SOMC=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
+CONFIG_POWER_QCOM_LEGACY=y
 CONFIG_SMB1351_USB_CHARGER=y
 CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_SMBCHARGER_EXTENSION=y
